# ct2hf

./: README.md  main.py  pyproject.toml
.github/: dependabot.yml  renovate.json
.github/workflows/: dependabot.yml  formatter.yml  main.yml
ct2hf/: __init__.py  compute_type.py  compute_type.pyi  convert.py  model_converter.py  parse_args.py  parse_args.pyi
tests/: conftest.py  test_generate_gitattributes.py
