[project]
name = "ct2hf"
version = "1.0.0"
description = "A user-friendly CLI tool for converting Hugging Face transformer models into a CTranslate2-compatible format."
readme = "README.md"
requires-python = ">=3.9, <3.15"
dependencies = ["accelerate>=1.10.1", "ctranslate2>=4.6.2", "transformers>=4.57.3"]

[project.scripts]
ct2hf = "ct2hf:main"

[dependency-groups]
dev = ["nodejs-wheel-binaries>=24.12.0", "pyright>=1.1.407", "pytest>=8.4.2", "ruff>=0.14.10"]

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""
module-name = "ct2hf"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "INP001", "ANN002", "PLR0913", "PT013", "TC001", "COM812"]

[tool.pyright]
typeCheckingMode = "strict"
reportUnknownVariableType = false
reportUnknownMemberType = false
reportMissingTypeStubs = false
reportPrivateUsage = false
